// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextIcon renders with color 1`] = `
<div>
  <div
    className="extra sc-bdVaJa cdKNHG"
  >
    <i
      aria-hidden="true"
      className="blue heart outline big icon sc-bwzfXH cXPuzX"
    />
    <div
      className="sc-htpNat gnxApo"
      color="blue"
    >
      0
    </div>
  </div>
</div>
`;

exports[`TextIcon renders with icon 1`] = `
<div>
  <div
    className="extra sc-bdVaJa cdKNHG"
  >
    <i
      aria-hidden="true"
      className="red shield big icon sc-bwzfXH cXPuzX"
    />
    <div
      className="sc-htpNat iPQVHr"
      color="red"
    >
      0
    </div>
  </div>
</div>
`;

exports[`TextIcon renders with no props 1`] = `
<div>
  <div
    className="extra sc-bdVaJa cdKNHG"
  >
    <i
      aria-hidden="true"
      className="red heart outline big icon sc-bwzfXH cXPuzX"
    />
    <div
      className="sc-htpNat iPQVHr"
      color="red"
    >
      0
    </div>
  </div>
</div>
`;

exports[`TextIcon renders with number 1`] = `
<div>
  <div
    className="extra sc-bdVaJa cdKNHG"
  >
    <i
      aria-hidden="true"
      className="red heart outline big icon sc-bwzfXH cXPuzX"
    />
    <div
      className="sc-htpNat iPQVHr"
      color="red"
    >
      4
    </div>
  </div>
</div>
`;
